<resources>
    <string name="app_name">WinRate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name='input_form_title'>Input Form</string>
    <string name='player_name'>Player Name</string>
    <string name='player_deck'>Player Deck</string>
    <string name='opponent_name'>Opponent Name</string>
    <string name='opponent_deck'>Opponent Deck</string>
    <string name='win'>Win</string>
    <string name='lose'>Lose</string>
    <string name="player_deck_hint">Your Deck</string>
    <string name="player_name_hint">Your Name</string>
    <string name="opponent_deck_hint">Opponent\'s Deck</string>
    <string name="opponent_name_hint">Opponent\'s Name</string>
    <string name="submit">Submit</string>
    <string name="input_form_menu_text">Input Form</string>
    <string name="statistics_menu_text">Statistics</string>
    <string name="contact_book_menu_text">Contact Book</string>
    <string name="life_counter_menu_text">Life Counter</string>
    <string name="settings_menu_text">Settings</string>
    <string name="title_activity_draw_test">DrawTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="contacts">Contacts</string>
    <string name="decks">Decks</string>
    <string name="contacts_list">Contacts List</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nickname">Nickname</string>
    <string name="view_table">View Table</string>
</resources>
